@@ -26,7 +26,7 @@ AC_TYPE_SIZE_T
 
 # Checks for library functions.
 AC_FUNC_MALLOC
-AC_CHECK_FUNCS([strtol setlocale strcasecmp strdup])
+AC_CHECK_FUNCS([strtol setlocale strcasecmp strdup strchr])
 
 # Check for pkg-config packages
 modules="gtk+-2.0 gdk-pixbuf-2.0"
